add LGPL as license
fixes #2

--- a/package.json
+++ b/package.json
@@ -33,5 +33,7 @@
         "email": "peter.wagenet@gmail.com"
     }, {
         "name": "Garth Williams"
-    }]
+    }],
+
+    "license": "LGPL"
 }
