add missing contributors

--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
         "email": "peter.wagenet@gmail.com"
     }, {
         "name": "Garth Williams"
+    }, {
+        "name": "Jarrod Nettles"
+    }, {
+        "name": "Zach Dennis"
     }],
 
     "license": "LGPL"
